fit landing page box in entire view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
     <section id="main">
       <header>
             <h2>One App.<h2>
-            <h2>A Thousand Of Faces, </h2><br>
+            <h2>A Thousand Faces, </h2><br>
         <span class="avatar"><%= image_tag("joel.jpg") %></span>
         <h1 class="name">Jane Doe</h1>
         <p class="program">Senior Psychonautics Engineer</p>
