--- a/app/assets/stylesheets/landing_page.css
+++ b/app/assets/stylesheets/landing_page.css
@@ -265,7 +265,7 @@
 		color: #313f47;
 		display: block;
 		font-size: 0.9em;
-		margin: 0 0 0.75em 0;
+		margin: 1em 0 0 0;
 	}
 
 	input[type="text"],
