--- a/app/assets/stylesheets/user_show.css
+++ b/app/assets/stylesheets/user_show.css
@@ -2476,7 +2476,7 @@
 		position: fixed;
 		text-align: right;
 		top: 0;
-		width: 35%;
+		width: 25%;
 	}
 
 		#header strong, #header b {
@@ -2511,7 +2511,7 @@
 	}
 
 		#footer .icons {
-			margin: 1em 0 0 0;
+			margin: 1em 9.5em 0 0;
 		}
 
 			#footer .icons a {
@@ -2522,7 +2522,7 @@
 			color: rgba(255, 255, 255, 0.4);
 			font-size: 0.8em;
 			list-style: none;
-			margin: 1em 0 0 0;
+			margin: 1em 12em 0 0;
 			padding: 0;
 		}
 
@@ -2549,13 +2549,13 @@
 	#main {
 		margin-left: 35%;
 		max-width: 54em;
-		padding: 8em 4em 4em 4em;
+		padding: 8em 4em 4em 0em;
 		width: calc(100% - 35%);
 	}
 
 		#main > section {
-			border-top: solid 2px #efefef;
-			margin: 4em 0 0 0;
+			/*border-top: solid 2px #efefef;*/
+			margin: -5em 0 5em 0;
 			padding: 4em 0 0 0;
 		}
 
