--- a/app/assets/stylesheets/feed.css
+++ b/app/assets/stylesheets/feed.css
@@ -2771,14 +2771,14 @@
 
 		.spotlight .image {
 			width: 15%;
-			border-radius: 0%;
+			/*border-radius: 0%;*/
 			margin: 0 1em 1em;
 			display: block;
 		}
 
 			.spotlight .image img {
 				display: block;
-				border-radius: 0%;
+				/*border-radius: 0%;*/
 				width: 100%;
 			}
 
