--- a/app/assets/stylesheets/feed.css
+++ b/app/assets/stylesheets/feed.css
@@ -2369,7 +2369,7 @@
 				border-radius: 0;
 				display: block;
 				position: relative;
-				width: 100%;
+				width: 77px;
 			}
 
 			.image.phone .inner, .image.phone:before, .image.phone:after {
@@ -2770,9 +2770,9 @@
 	}
 
 		.spotlight .image {
-			width: 30%;
+			width: 15%;
 			border-radius: 100%;
-			margin: 0 3em 0 0;
+			margin: 0 1em 1em 0;
 			display: block;
 		}
 
@@ -2783,7 +2783,8 @@
 			}
 
 		.spotlight .content {
-			width: 70%;
+			width: 100%;
+			padding: 5%;
 		}
 
 			.spotlight .content > :last-child {
@@ -3623,456 +3624,7 @@
 		}
 
 	}
-
-/* Header */
-
-	#header {
-		background-color: #4696e5;
-		color: #d0e4f8;
-		padding: 4.5em 0 2.5em 0 ;
-		-moz-align-items: center;
-		-webkit-align-items: center;
-		-ms-align-items: center;
-		align-items: center;
-		display: -moz-flex;
-		display: -webkit-flex;
-		display: -ms-flex;
-		display: flex;
-		-moz-justify-content: center;
-		-webkit-justify-content: center;
-		-ms-justify-content: center;
-		justify-content: center;
-		background-image: url("images/overlay.png"), url("images/pattern-size1.svg");
-		background-position: top left, center center;
-		background-attachment: fixed, fixed;
-		background-size: auto, cover;
-		height: 100vh;
-		min-height: 35em;
-	}
-
-		#header input[type="submit"],
-		#header input[type="reset"],
-		#header input[type="button"],
-		#header button,
-		#header .button {
-			background-color: transparent;
-			color: #ffffff !important;
-			box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.25);
-		}
-
-			#header input[type="submit"]:hover,
-			#header input[type="reset"]:hover,
-			#header input[type="button"]:hover,
-			#header button:hover,
-			#header .button:hover {
-				background-color: rgba(255, 255, 255, 0.075);
-			}
-
-			#header input[type="submit"]:active,
-			#header input[type="reset"]:active,
-			#header input[type="button"]:active,
-			#header button:active,
-			#header .button:active {
-				background-color: rgba(255, 255, 255, 0.2);
-			}
-
-			#header input[type="submit"].special,
-			#header input[type="reset"].special,
-			#header input[type="button"].special,
-			#header button.special,
-			#header .button.special {
-				box-shadow: none;
-				background-color: #ffffff;
-				color: #4696e5 !important;
-			}
-
-		#header label {
-			color: #ffffff;
-		}
-
-		#header input[type="text"],
-		#header input[type="password"],
-		#header input[type="email"],
-		#header select,
-		#header textarea {
-			color: inherit;
-			background-color: rgba(255, 255, 255, 0.075);
-			border-color: rgba(255, 255, 255, 0.25);
-		}
-
-			#header input[type="text"]:focus,
-			#header input[type="password"]:focus,
-			#header input[type="email"]:focus,
-			#header select:focus,
-			#header textarea:focus {
-				border-color: #ffffff;
-				box-shadow: 0 0 0 1px #ffffff;
-			}
-
-		#header .select-wrapper:before {
-			color: rgba(255, 255, 255, 0.25);
-		}
-
-		#header input[type="checkbox"] + label,
-		#header input[type="radio"] + label {
-			color: #d0e4f8;
-		}
-
-			#header input[type="checkbox"] + label:before,
-			#header input[type="radio"] + label:before {
-				background-color: rgba(255, 255, 255, 0.075);
-				border-color: rgba(255, 255, 255, 0.25);
-			}
-
-		#header input[type="checkbox"]:checked + label:before,
-		#header input[type="radio"]:checked + label:before {
-			background-color: #ffffff;
-			border-color: #ffffff;
-			color: #4696e5;
-		}
-
-		#header input[type="checkbox"]:focus + label:before,
-		#header input[type="radio"]:focus + label:before {
-			border-color: #ffffff;
-			box-shadow: 0 0 0 1px #ffffff;
-		}
-
-		#header ::-webkit-input-placeholder {
-			color: #b5d5f4 !important;
-		}
-
-		#header :-moz-placeholder {
-			color: #b5d5f4 !important;
-		}
-
-		#header ::-moz-placeholder {
-			color: #b5d5f4 !important;
-		}
-
-		#header :-ms-input-placeholder {
-			color: #b5d5f4 !important;
-		}
-
-		#header .formerize-placeholder {
-			color: #b5d5f4 !important;
-		}
-
-		#header .icon {
-			color: #b5d5f4;
-		}
-
-		#header .image {
-			box-shadow: 0 0 0 4px #4696e5, 0 0 0 5px rgba(255, 255, 255, 0.25);
-		}
-
-			#header .image.phone {
-				box-shadow: none;
-			}
-
-				#header .image.phone .inner, #header .image.phone:before, #header .image.phone:after {
-					border-color: rgba(255, 255, 255, 0.25);
-				}
-
-				#header .image.phone .inner:before {
-					background: rgba(255, 255, 255, 0.25);
-				}
-
-				#header .image.phone .inner:after {
-					border-color: rgba(255, 255, 255, 0.25);
-				}
-
-		#header ul.alt > li {
-			border-top-color: rgba(255, 255, 255, 0.25);
-		}
-
-		#header table tbody tr {
-			border-color: rgba(255, 255, 255, 0.25);
-		}
-
-			#header table tbody tr:nth-child(2n + 1) {
-				background-color: rgba(255, 255, 255, 0.075);
-			}
-
-		#header table th {
-			color: #ffffff;
-		}
-
-		#header table thead {
-			border-bottom-color: rgba(255, 255, 255, 0.25);
-		}
-
-		#header table tfoot {
-			border-top-color: rgba(255, 255, 255, 0.25);
-		}
-
-		#header table.alt tbody tr td {
-			border-color: rgba(255, 255, 255, 0.25);
-		}
-
-		#header input, #header select, #header textarea {
-			color: #d0e4f8;
-		}
-
-		#header a {
-			color: inherit;
-			border-bottom-color: rgba(255, 255, 255, 0.5);
-			color: #ffffff;
-		}
-
-		#header strong, #header b {
-			color: #ffffff;
-		}
-
-		#header h1, #header h2, #header h3, #header h4, #header h5, #header h6 {
-			color: #ffffff;
-		}
-
-		#header blockquote {
-			border-left-color: rgba(255, 255, 255, 0.25);
-		}
-
-		#header code {
-			background: rgba(255, 255, 255, 0.075);
-			border-color: rgba(255, 255, 255, 0.25);
-		}
-
-		#header hr {
-			border-bottom-color: rgba(255, 255, 255, 0.25);
-		}
-
-		#header h1 {
-			font-size: 3.25em;
-			font-weight: bold;
-			margin-bottom: 0.5em;
-		}
-
-		#header p {
-			font-size: 1.5em;
-			line-height: 1.35em;
-		}
-
-			#header p br {
-				display: inline;
-			}
-
-		#header .content {
-			-moz-transition: opacity 0.5s ease, -moz-transform 1s ease;
-			-webkit-transition: opacity 0.5s ease, -webkit-transform 1s ease;
-			-ms-transition: opacity 0.5s ease, -ms-transform 1s ease;
-			transition: opacity 0.5s ease, transform 1s ease;
-			-moz-transform: translateX(0);
-			-webkit-transform: translateX(0);
-			-ms-transform: translateX(0);
-			transform: translateX(0);
-			opacity: 1;
-			text-align: right;
-			margin: -3.5em 4em 0 0;
-		}
-
-			#header .content > :last-child {
-				margin-bottom: 0;
-			}
-
-		#header .image {
-			-moz-transition: opacity 1s ease, -moz-transform 1s ease;
-			-webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
-			-ms-transition: opacity 1s ease, -ms-transform 1s ease;
-			transition: opacity 1s ease, transform 1s ease;
-			-moz-transform: translateY(0);
-			-webkit-transform: translateY(0);
-			-ms-transform: translateY(0);
-			transform: translateY(0);
-			opacity: 1;
-		}
-
-			#header .image img {
-				-moz-transition: opacity 0.75s ease;
-				-webkit-transition: opacity 0.75s ease;
-				-ms-transition: opacity 0.75s ease;
-				transition: opacity 0.75s ease;
-				-moz-transition-delay: 0.75s;
-				-webkit-transition-delay: 0.75s;
-				-ms-transition-delay: 0.75s;
-				transition-delay: 0.75s;
-				opacity: 1;
-			}
-
-		@media screen and (max-width: 1280px) {
-
-			#header {
-				background-image: url("images/overlay.png"), url("images/pattern-size2.svg");
-			}
-
-		}
-
-		@media screen and (max-width: 980px) {
-
-			#header {
-				height: auto;
-				min-height: 0;
-			}
-
-				#header .content {
-					margin: -2em 4em 0 0;
-				}
-
-		}
-
-		@media screen and (max-width: 980px) and (orientation: portrait) {
-
-			#header {
-				padding: 6em 3em 4em 3em ;
-				-moz-flex-direction: column-reverse;
-				-webkit-flex-direction: column-reverse;
-				-ms-flex-direction: column-reverse;
-				flex-direction: column-reverse;
-			}
-
-				#header .content {
-					display: block;
-					width: 100%;
-					text-align: center;
-					margin: 0 0 2em 0;
-				}
-
-				#header .image {
-					overflow: hidden;
-				}
-
-		}
-
-		@media screen and (max-width: 736px) {
-
-			#header {
-				background-image: url("images/overlay.png"), url("images/pattern-size3.svg");
-			}
-
-				#header h1 {
-					font-size: 2em;
-				}
-
-				#header p {
-					font-size: 1em;
-					line-height: inherit;
-				}
-
-		}
-
-		@media screen and (max-width: 736px) and (orientation: landscape) {
-
-			#header {
-				padding: 2em 2em 0.1em 2em ;
-			}
-
-				#header .content {
-					margin: 0 2em 2em 0;
-				}
-
-				#header .image {
-					font-size: 0.8em;
-					width: 15em;
-					max-width: 20vw;
-				}
-
-					#header .image .inner, #header .image:before, #header .image:after {
-						font-size: 0.8em;
-					}
-
-		}
-
-		@media screen and (max-width: 736px) and (orientation: portrait) {
-
-			#header {
-				padding: 3em 1.5em 1em 1.5em ;
-			}
-
-				#header .image {
-					font-size: 0.6em;
-					max-width: 60vw;
-				}
-
-		}
-
-	@media screen and (max-width: 480px) and (orientation: landscape) {
-
-		#header {
-			padding: 2em 1.5em 0.1em 1.5em ;
-		}
-
-			#header .image {
-				font-size: 0.7em;
-			}
-
-			#header .actions {
-				font-size: 0.8em;
-			}
-
-	}
-
-	@media screen and (max-width: 480px) and (orientation: portrait) {
-
-		#header {
-			padding: 2em 1em 0.1em 1em ;
-		}
-
-	}
-
-		body.is-mobile #header {
-			background-attachment: scroll, scroll;
-		}
-
-		body.is-loading #header .content {
-			-moz-transform: translateX(2em);
-			-webkit-transform: translateX(2em);
-			-ms-transform: translateX(2em);
-			transform: translateX(2em);
-			opacity: 0;
-		}
-
-		body.is-loading #header .image {
-			-moz-transform: translateY(4em);
-			-webkit-transform: translateY(4em);
-			-ms-transform: translateY(4em);
-			transform: translateY(4em);
-			opacity: 0;
-		}
-
-			body.is-loading #header .image img {
-				opacity: 0;
-			}
-
-	@media screen and (max-width: 980px) and (orientation: portrait) {
-
-		body.is-loading #header .content {
-			-moz-transform: none;
-			-webkit-transform: none;
-			-ms-transform: none;
-			transform: none;
-			opacity: 1;
-		}
-
-		body.is-loading #header .image {
-			-moz-transform: translateY(2em);
-			-webkit-transform: translateY(2em);
-			-ms-transform: translateY(2em);
-			transform: translateY(2em);
-		}
-
-	}
-
-/* Main */
-
-	#main {
-		padding: 4em 0 2em 0 ;
-	}
-
-		@media screen and (max-width: 736px) {
-
-			#main {
-				padding: 3em 0 1em 0 ;
-			}
-
-		}
+}
 
 /* Footer */
 
