--- a/app/assets/stylesheets/feed.css
+++ b/app/assets/stylesheets/feed.css
@@ -2483,6 +2483,7 @@
 		cursor: default;
 		list-style: none;
 		padding-left: 0;
+		padding-top: 50px
 	}
 
 	ul.icons li {
@@ -2772,7 +2773,7 @@
 	.spotlight .image {
 		width: 15%;
 		border-radius: 0%;
-		margin: 0 1em 1em;
+		margin: 0 2em 6.5em 0em;
 		display: block;
 	}
 
@@ -2800,7 +2801,7 @@
 	}
 
 	.spotlight:nth-child(2n) .image {
-		margin: 0 0 0 3em;
+		margin: 0 0 6.5em 2em;
 	}
 
 	.spotlight:nth-child(2n) .content {
@@ -3626,78 +3627,78 @@
 
 	}
 
-	/* Footer */
+/* Footer */
+
+#footer {
+	background-color: #f7f7f7;
+	color: #999999;
+	padding: 4.5em 0 2.5em 0 ;
+	color: #b0b0b0;
+	text-align: center;
+}
+
+#footer input, #footer select, #footer textarea {
+	color: #999999;
+}
+
+#footer a {
+	color: inherit;
+	border-bottom-color: #c6c6c6;
+}
+
+#footer a:hover {
+	color: #4696e5;
+}
+
+#footer strong, #footer b {
+	color: #828282;
+}
+
+#footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6 {
+	color: #828282;
+}
+
+#footer blockquote {
+	border-left-color: #d6d6d6;
+}
+
+#footer code {
+	background: rgba(144, 144, 144, 0.075);
+	border-color: #d6d6d6;
+}
+
+#footer hr {
+	border-bottom-color: #d6d6d6;
+}
+
+#footer a {
+	color: inherit;
+}
+
+#footer .copyright {
+	font-size: 0.8em;
+}
+
+@media screen and (max-width: 980px) {
 
 	#footer {
-		background-color: #f7f7f7;
-		color: #999999;
-		padding: 4.5em 0 2.5em 0 ;
-		color: #b0b0b0;
-		text-align: center;
+		padding: 4em 4em 2em 4em ;
 	}
 
-	#footer input, #footer select, #footer textarea {
-		color: #999999;
+}
+
+@media screen and (max-width: 736px) and (orientation: landscape) {
+
+	#footer {
+		padding: 3em 3em 1em 3em ;
 	}
 
-	#footer a {
-		color: inherit;
-		border-bottom-color: #c6c6c6;
+}
+
+@media screen and (max-width: 736px) and (orientation: portrait) {
+
+	#footer {
+		padding: 3em 1.5em 1em 1.5em ;
 	}
 
-	#footer a:hover {
-		color: #4696e5;
-	}
-
-	#footer strong, #footer b {
-		color: #828282;
-	}
-
-	#footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6 {
-		color: #828282;
-	}
-
-	#footer blockquote {
-		border-left-color: #d6d6d6;
-	}
-
-	#footer code {
-		background: rgba(144, 144, 144, 0.075);
-		border-color: #d6d6d6;
-	}
-
-	#footer hr {
-		border-bottom-color: #d6d6d6;
-	}
-
-	#footer a {
-		color: inherit;
-	}
-
-	#footer .copyright {
-		font-size: 0.8em;
-	}
-
-	@media screen and (max-width: 980px) {
-
-		#footer {
-			padding: 4em 4em 2em 4em ;
-		}
-
-	}
-
-	@media screen and (max-width: 736px) and (orientation: landscape) {
-
-		#footer {
-			padding: 3em 3em 1em 3em ;
-		}
-
-	}
-
-	@media screen and (max-width: 736px) and (orientation: portrait) {
-
-		#footer {
-			padding: 3em 1.5em 1em 1.5em ;
-		}
-
-	}
+}
