--- a/app/views/events/_invited_events_feed.html.erb
+++ b/app/views/events/_invited_events_feed.html.erb
@@ -6,7 +6,7 @@
   <!-- <div class="inner"> -->
   <section class="spotlight">
     <div class="image">
-      <%= image_tag("joel.jpg")%>
+      <%= image_tag(invited_events[0].user.avatar) %>
     </div>
     <div class="content">
       <h3><%=invited_events[0].location_address%></h3>
@@ -17,7 +17,7 @@
   <% if invited_events[1] %>
   <section class="spotlight">
     <div class="image">
-      <%= image_tag("joel.jpg")%>
+      <%= image_tag(invited_events[1].user.avatar) %>
     </div>
     <div class="content">
       <h3><%=invited_events[1].location_address%></h3>
