--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,14 +9,29 @@
     <!-- Header -->
       <header id="header">
         <a href="#" class="image avatar"><%= image_tag("joel.jpg") %></a>
-        <h1><strong><%= @user.full_name %></strong><br /> a super simple<br />
-        responsive site template freebie<br />
-        crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+        <h1>
+          <strong>
+            <%= @user.full_name %>
+          </strong>
+        </h1><!-- 
+      <p>
+        Masters In Management & Systems
+     </p> -->
+        <p>
+          <%= @user.school.name %>
+      </p>
+
+        <ul class="icons">
+          <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+          <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+          <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+          <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+        </ul>
       </header>
 
 
     <!-- Footer -->
-      <footer id="footer">
+<!--       <footer id="footer">
         <ul class="icons">
           <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
           <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
@@ -27,7 +42,7 @@
           <li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
         </ul>
       </footer>
-
+ -->
     <!-- Main -->
       <div id="main">
         <% @user.invited_events.each_slice(2) do |e|%>
