--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,8 +22,8 @@
       </p>
 
         <ul class="icons">
-          <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-          <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+          <li><a href="#" class="icon fa-group"><span class="label">Twitter</span></a></li>
+          <li><a href="#" class="icon fa-paper-plane-o"><span class="label">Github</span></a></li>
           <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
           <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
         </ul>
