--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,6 +32,9 @@
 
       <h2>Sign up</h2>
 
+        <%= f.label :first_name %>
+        <%= f.text_field :first_name, :autofocus => true , required: true %>
+
       <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
       
