--- a/app/assets/stylesheets/user_show.css
+++ b/app/assets/stylesheets/user_show.css
@@ -1572,8 +1572,11 @@
 		font-weight: 400;
 		line-height: 1.75em;
 	}
-
+	
 	a {
+		color: #b2b2b2;
+	}
+	a:hover {
 		-moz-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		-webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
@@ -1582,7 +1585,7 @@
 		color: #49bf9d;
 		text-decoration: none;
 	}
-
+#b2b2b2
 		a:hover {
 			border-bottom-color: transparent;
 			color: #49bf9d !important;
@@ -1716,7 +1719,7 @@
 	}
 
 	header p {
-		color: #b2b2b2;
+		color: #ffffff;
 		position: relative;
 		margin: 0 0 1.5em 0;
 	}
@@ -2869,7 +2872,7 @@
 				width: 30%;
 			}
 
-				#footer .copyright li {
+				copyright li {
 					border-left-width: 0;
 					display: block;
 					line-height: 2.25em;
