--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,6 +27,9 @@
           <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
           <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
         </ul>
+        <ul class="copyright">
+          <p>&copy; Apostell</p><p>Sign <%= link_to "Out",destroy_user_session_path, :method => :delete %> </a></p>
+        </ul>
       </header>
 
 
@@ -37,9 +40,6 @@
           <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
           <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
           <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-        </ul>
-        <ul class="copyright">
-          <li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
         </ul>
       </footer>
  -->
