--- a/app/assets/stylesheets/feed.css
+++ b/app/assets/stylesheets/feed.css
@@ -1622,7 +1622,7 @@
 	}
 
 	body {
-		background: #ffffff;
+		background-color: #f5f8fa;
 	}
 
 	body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -2786,7 +2786,8 @@
 	.spotlight .content {
 		width: 100%;
 		padding: 5%;
-		background-color: #EBEBEB;
+		background-color: #ffffff;
+		border: 1px solid #e1e8ed;
 	}
 
 	.spotlight .content > :last-child {
@@ -2937,7 +2938,7 @@
 
 	.wrapper {
 		padding: 4.5em 0 2.5em 0 ;
-		background-color: #ffffff;
+		background-color: #f5f8fa;
 		/*border-bottom: solid 2px #eeeeee;*/
 	}
 
