add school selection to signup

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -77,13 +77,13 @@
         <br>
       </section>
 
-      <!-- Footer -->
-      <footer id="footer">
-        <ul class="copyright">
-          <li>&copy; Jane Doe</li>
-          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-        </ul>
-      </footer>
+    <!-- Footer -->
+    <footer id="footer">
+      <ul class="copyright">
+        <li>&copy; Apostell</li>
+        <!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
+      </ul>
+    </footer>
 
     </div>
 
