--- a/app/assets/stylesheets/feed.css
+++ b/app/assets/stylesheets/feed.css
@@ -2812,8 +2812,17 @@
 	@media screen and (max-width: 736px) and (orientation: landscape) {
 
 		.spotlight .image {
+			width: 100%;
+			max-width: 60%;
 			margin: 0 2em 0 0;
 		}
+
+
+	.spotlight .image img {
+		display: block;
+		border-radius: 0%;
+		width: 100%;
+	}
 
 		.spotlight:nth-child(2n) .image {
 			margin: 0 0 0 2em;
@@ -2831,10 +2840,17 @@
 		}
 
 		.spotlight .image {
-			width: 100%;
+			width: 30%;
 			max-width: 60%;
 			margin: 0 0 2em 0 !important;
 		}
+
+
+	.spotlight .image img {
+		display: block;
+		border-radius: 0%;
+		width: 100%;
+	}
 
 		.spotlight .content {
 			width: 100%;
