--- a/app/views/events/_invited_events_feed.html.erb
+++ b/app/views/events/_invited_events_feed.html.erb
@@ -5,25 +5,35 @@
 <section class="wrapper">
   <!-- <div class="inner"> -->
   <section class="spotlight">
-    <div class="image">
-      <%= image_tag(invited_events[0].user.avatar) %>
-    </div>
+      <a href="/users/<%= invited_events[0].user.id %>" class="image" >
+        <%= image_tag(invited_events[0].user.avatar) %>
+      </a>
     <div class="content">
-      <h3><%=invited_events[0].name %></h3>
-      <h5><%=invited_events[0].location_address %></h5>
-      <p><%=invited_events[0].description %></p>
+      <p>Created By 
+      <a href="/users/<%= invited_events[0].user.id %>" >
+        <%=invited_events[0].creator.capitalize %>
+      </a>
+      </p>
+      <p>Event Name: <%=invited_events[0].name %></p>
+      <p>Meeting Place: <%=invited_events[0].location_address %></p>
+      <p>What's it About: <%=invited_events[0].description %></p>
     </div>
   </section>
   <% end %>
   <% if invited_events[1] %>
   <section class="spotlight">
-    <div class="image">
+      <a href="/users/<%= invited_events[1].user.id %>" class="image" >
       <%= image_tag(invited_events[1].user.avatar) %>
-    </div>
+    </a>
     <div class="content">
-      <h3><%=invited_events[1].name %></h3>
-      <h5><%=invited_events[1].location_address %></h5>
-      <p><%=invited_events[1].description %></p>
+      <p>By 
+      <a href="/users/<%= invited_events[1].user.id %>" >
+        <%=invited_events[1].creator.capitalize %>
+      </a>
+      </p>
+      <p>Event Name: <%=invited_events[1].name %></p>
+      <p>Meeting Place: <%=invited_events[1].location_address %></p>
+      <p>What's it About: <%=invited_events[1].description %></p>
     </div>
   </section>
   <% end %>
