--- a/app/assets/stylesheets/feed.css
+++ b/app/assets/stylesheets/feed.css
@@ -1683,7 +1683,7 @@
 		-ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		text-decoration: none;
-		border-bottom: dotted 1px;
+		/*border-bottom: dotted 1px;*/
 	}
 
 	a:hover {
@@ -1699,7 +1699,7 @@
 	}
 
 	p {
-		margin: 0 0 2em 0;
+		margin: 0 0 0.5em 0;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -2806,7 +2806,13 @@
 	}
 
 	.spotlight:nth-child(2n) .content {
-		text-align: right;
+		text-align: left;
+	}
+
+	.spotlight .content .event_detail {
+		color: #324233;
+		font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+		text-decoration: underline;
 	}
 
 	@media screen and (max-width: 736px) and (orientation: landscape) {
