--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,13 @@
   </script>
 
 </body>
+<% elsif not user_signed_in? %>
+  <%= stylesheet_link_tag "landing_page" %>
+  <%= javascript_include_tag 'landing_page' %>
+<%= yield %>
+
 <% else %>
+
       <!-- NAVBAR -->
 
       <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -108,7 +114,7 @@
         </div><!-- /.container-fluid -->
       </nav>
     </nav>
-
+    
     <!-- END NAVBAR -->
 <%= yield %>
 <% end %>
